--- a/images/protoc/Dockerfile
+++ b/images/protoc/Dockerfile
@@ -1,8 +1,1 @@
-FROM scratch
-
-ENV PROTOC_ZIP=protoc-3.14.0-linux-x86_64.zip
-
-RUN curl -OL https://github.com/protocolbuffers/protobuf/releases/download/v3.14.0/$PROTOC_ZIP
-RUN unzip -o $PROTOC_ZIP -d /usr/local bin/protoc
-RUN unzip -o $PROTOC_ZIP -d /usr/local 'include/*'
-RUN rm -f $PROTOC_ZIP
+# todo
